--- a/disk6directory/rawreads/README.RMD
+++ b/disk6directory/rawreads/README.RMD
@@ -178,7 +178,7 @@ while read file; do ./software/bbmap/bbduk.sh -Xmx3g in=./rawreads/LGEPfasta/lan
 
 All lanes are processed the same way by changing the lane numbers in the bbduk command.
 
-Note:After processing Sample_101b in lane10 for LGEP file was much smaller, re-ran again on that file at a later time so file date is newer.
+Note: After processing Sample_101b in lane10 for LGEP file was much smaller, re-ran again on that file at a later time so file date is newer.  Same with Sample_57h in lane13 for LGEP, except issue was that fq.gz file was not complete.
 
 ## 4. FastQC can be re-done on filtered and trimmed files
 
