--- a/disk6directory/analyses/step1.rawdataprep/README.RMD
+++ b/disk6directory/analyses/step1.rawdataprep/README.RMD
@@ -1,3 +1,12 @@
+---
+title: "Step1: Load Raw counts + Phenos"
+author: "Adam Festa"
+date: "March 2, 2018"
+output: 
+  md_document: 
+    toc: yes
+---
+
 # Step1: Load Raw counts + Phenos
 
 author: "Adam Festa"
