--- a/disk6directory/analyses/README.RMD
+++ b/disk6directory/analyses/README.RMD
@@ -1,6 +1,8 @@
 # ANALYSES
 
 ## Step 1 - Data Prep
+   
+   [See markdown of data steps](disk6directory/rawreads/README.md)
 
     * The first step involves reading in the aligned technical replicate counts using the tximport package.
       
