--- a/disk6directory/analyses/step2.loadcounts/README.RMD
+++ b/disk6directory/analyses/step2.loadcounts/README.RMD
@@ -1,3 +1,3 @@
 # Loading Raw Counts
 
-See: for complete markdown with outputs
+See: [load.counts.html](http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step2.loadcounts/load.counts.html) for complete markdown with outputs
