--- a/disk6directory/analyses/README.RMD
+++ b/disk6directory/analyses/README.RMD
@@ -9,11 +9,13 @@
 
 ## Step 2 - Load Count Data
       
-   Once counts have been estimated, the next step involves reading in the aligned technical, or biological replicate counts using the tximport package.
+   Once counts have been estimated, the next step involves reading in the aligned technical, or biological, replicate counts using the tximport package.
       
    Additionally, the phenotype and other sample meta-data is constructed for normalization.
    
-   See the [load counts html file](http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step2.loadcounts/load.counts.html) for complete markdown with outputs.
+   To see this process for **biological reps**, navigate to: [load counts bio rep html file](http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step2.loadcounts/load.counts.html) which contains the complete markdown and output.
+
+   To see this process for **technical reps**, navigate to: [load counts tech rep html file](http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step2.loadcounts/load.counts_techreps.html) which contains the complete markdown and output.
 
 ## Step 3 - Normalization
 
