update prediction visualization markdown for 70-fold

--- a/disk6directory/analyses/step4.prediction/step6_visualize_predictions.Rmd
+++ b/disk6directory/analyses/step4.prediction/step6_visualize_predictions.Rmd
@@ -17,6 +17,42 @@ Load starting data and library packages
 
 ```{r cars}
 library(caret,quietly = T); library(ggpubr,quietly = T)
+
+summarySE <- function(data=NULL, measurevar, groupvars=NULL, na.rm=FALSE,
+                      conf.interval=.95, .drop=TRUE) {
+  library(plyr)
+  
+  # New version of length which can handle NA's: if na.rm==T, don't count them
+  length2 <- function (x, na.rm=FALSE) {
+    if (na.rm) sum(!is.na(x))
+    else       length(x)
+  }
+  
+  # This does the summary. For each group's data frame, return a vector with
+  # N, mean, and sd
+  datac <- ddply(data, groupvars, .drop=.drop,
+                 .fun = function(xx, col) {
+                   c(N    = length2(xx[[col]], na.rm=na.rm),
+                     mean = mean   (xx[[col]], na.rm=na.rm),
+                     sd   = sd     (xx[[col]], na.rm=na.rm)
+                   )
+                 },
+                 measurevar
+  )
+  
+  # Rename the "mean" column    
+  datac <- rename(datac, c("mean" = measurevar))
+  
+  datac$se <- datac$sd / sqrt(datac$N)  # Calculate standard error of the mean
+  
+  # Confidence interval multiplier for standard error
+  # Calculate t-statistic for confidence interval: 
+  # e.g., if conf.interval is .95, use .975 (above/below), and use df=N-1
+  ciMult <- qt(conf.interval/2 + .5, datac$N-1)
+  datac$ci <- datac$se * ciMult
+  
+  return(datac)
+}
 load("~/Desktop/Alt Approaches/Breeding-Value-Prediction/shared/step4_create.70.RData")
 load("~/Desktop/Alt Approaches/Breeding-Value-Prediction/shared/step5_cv.group.predictions.RData")
 ```
@@ -34,6 +70,7 @@ load("~/Desktop/Alt Approaches/Breeding-Value-Prediction/shared/step5_cv.group.p
 ```{r pressure, echo=FALSE}
 length(cv.group.predictions)
 length(cv.group.predictions[[1]])
+
 
 # Test group 1, subsetting at pvalue of 0.01
 names(cv.group.predictions[[1]][[1]])
@@ -54,7 +91,8 @@ true.breeding.values <- lapply(1:70,function(each.test.group){
 })
 
 pvals <- c(0.01,.05,.1,.15,.2,.25,.3,1)
-final.dat <- lapply(1:8,function(each.p){
+
+suppressWarnings(final.dat <- lapply(1:8,function(each.p){
 
   lasso.predictions <- unlist(lapply(1:70,function(x) {
     cor(cv.group.predictions[[x]][[each.p]]$lasso,true.breeding.values[[x]])}))
@@ -69,7 +107,7 @@ final.dat <- lapply(1:8,function(each.p){
   ok.predictions <- data.frame("cors"=ok.predictions,"data.type"=rep(c("txpts","snps","txpts.snps"),times=70),"model"="ok","pval"=pvals[each.p],"group"=rep(c(1:70),each=3))
 
 this.p <- rbind(lasso.predictions,ridge.predictions,ok.predictions)
-})
+}))
 
 
 p.cor.data <- do.call(rbind,final.dat)
@@ -123,32 +161,44 @@ p <- ggplot(data=p.cor.data,mapping = aes(x=pval,y=cors)) + geom_boxplot(aes(fil
 p + facet_grid(~ data.type)
 ```
 
+## Group prediction plot
+```{r}
+all.means <- lapply(train.breeding.values, mean)
+#all.preds <- unlist(lapply(1:70,function(x) cv.group.predictions[[x]][[8]]$lasso$txpts.snps - all.means[[x]]))
+this.start <- seq(1,64,7)
+this.num <- seq(7,70,7)
+for(each in 1:length(this.start)){
+all.preds <- unlist(lapply(this.start[each]:this.num[each],function(x) cv.group.predictions[[x]][[8]]$lasso$txpts.snps))
+all.trues <- unlist(lapply(this.start[each]:this.num[each],function(x) true.breeding.values[[x]] ))
+#all.trues <- unlist(lapply(1:70,function(x) true.breeding.values[[x]] - all.means[[x]]))
+#true breeding values contains all true
+plot(all.preds,all.trues)}
+```
+
+
+## Family mean prediction plot
 
 ```{r}
 all.means <- lapply(train.breeding.values, mean)
-all.preds <- unlist(lapply(1:70,function(x) cv.group.predictions[[x]][[8]]$lasso$txpts.snps - all.means[[x]]))
-all.trues <- unlist(lapply(1:70,function(x) true.breeding.values[[x]] - all.means[[x]]))
+#all.preds <- unlist(lapply(1:70,function(x) cv.group.predictions[[x]][[8]]$lasso$txpts.snps - all.means[[x]]))
+all.preds <- unlist(lapply(1:70,function(x) cv.group.predictions[[x]][[8]]$lasso$txpts.snps))
+all.trues <- unlist(lapply(1:70,function(x) true.breeding.values[[x]] ))
+#all.trues <- unlist(lapply(1:70,function(x) true.breeding.values[[x]] - all.means[[x]]))
 #true breeding values contains all true
 plot(all.preds,all.trues)
-cor(all.preds,all.trues)
 ```
 
 
 ```{r}
 all.fams <- unlist(lapply(1:70,function(x) cv.70.data$test.fam.index[x,]))
 
+all.dat <- data.frame("fam"=all.fams,"prediction"=all.preds,"true.values"=all.trues)
+tgc2 <- summarySE(all.dat, measurevar="prediction", groupvars=c("fam"))
+tgc3 <- summarySE(all.dat, measurevar="true.values", groupvars=c("fam"))
+f.dat <- cbind(tgc2,"true.values"=tgc3$true.values)
 
-
-fam.preds <- unlist(lapply(1:56,function(x){
-  these.fams <- which(all.fams %in% as.character(cv.70.data$fam.phenos$fam_id)[x])
-  mean(all.preds[these.fams])
-}))
-fam.trues <- unlist(lapply(1:56,function(x){
-  these.fams <- which(all.fams %in% as.character(cv.70.data$fam.phenos$fam_id)[x])
-  mean(all.trues[these.fams])
-}))
-
-#true breeding values contains all true
-fam.plot <- data.frame("prediction"=fam.preds,"true.vals"=fam.trues)
-ggplot(fam.plot,aes(x=prediction,y=true.vals)) + geom_point() + geom_smooth(method="lm") + stat_cor() + theme_pubclean() + geom_vline(xintercept = 0) + geom_hline(yintercept = 0)
+ggplot(f.dat,aes(x=prediction,y=true.values)) + geom_point() + geom_smooth(method="lm") +
+    stat_cor() + theme_pubclean() + geom_vline(xintercept = 117.8573) + geom_hline(yintercept = 117.8573) +  geom_errorbarh(aes(xmin=prediction-se, xmax=prediction+se)) 
 ```
+
+
